--- a/ircast.cabal
+++ b/ircast.cabal
@@ -16,6 +16,8 @@ library
   build-depends:       base ==4.5.*, text ==0.11.*, 
                        pipes-attoparsec ==0.3.*,
                        pipes-network ==0.6.*,
+                       pipes-concurrency ==2.0.*,
+                       pipes-bytestring ==1.0.*,
                        pipes ==4.0.*,
                        irc-bytestring ==0.1.*,
                        bytestring ==0.9.*,
