--- a/ircast.cabal
+++ b/ircast.cabal
@@ -14,16 +14,22 @@ cabal-version:       >=1.8
 
 library
   build-depends:       base ==4.5.*, text ==0.11.*, 
+                       containers ==0.4.*,
                        pipes-attoparsec ==0.3.*,
                        pipes-network ==0.6.*,
                        pipes-concurrency ==2.0.*,
                        pipes-bytestring ==1.0.*,
+                       aeson ==0.6.*,
+                       time ==1.4.*,
                        pipes ==4.0.*,
                        irc-bytestring ==0.1.*,
                        bytestring ==0.9.*,
                        attoparsec ==0.10.*,
                        network-simple ==0.3.*,
-                       mtl ==2.1.*
+                       mtl ==2.1.*,
+                       pipes-fastcgi,
+                       direct-fastcgi == 2.*,
+                       stm ==2.*
   exposed-modules:     Network.IRC.Pipes,
                        Network.IRC.Cast.Main
   hs-source-dirs:      lib
